...
            indicatorWeight: 4,
            tabs: [
              Tab(
                text: AppLocalizations.of(context)!.all_pokemons,
              ),
              Tab(
                key: const Key('favouritesTap'),
                child: Consumer<FavouritesNum>(
                    builder: (context, favCount, child) {
                  if (favCount.num == 0) {
                    return Text(AppLocalizations.of(context)!.favourites);
                  }
                  return Row(
...
                    children: [
                      Text(AppLocalizations.of(context)!.favourites),
                      const SizedBox(
                        width: 4,
                      ),
                      Container(
                        key: const Key('favCount'),
                        padding: const EdgeInsets.all(3.5),
                        decoration: BoxDecoration(
                          color: ThemeColors.splashBackgroundColor,
                          borderRadius: BorderRadius.circular(12),
                        ),
                        constraints: const BoxConstraints(
...
