...
            body = const Center(child: CircularProgressIndicator(),);
          } else if (state is NoInternetPokemonListState) {
            enablePullUp = false;
            body = Center(child: Text(AppLocalizations.of(context)!.no_internet));
          } else if (state is ViewPokemonsListState) {
            body = GridView.builder(
              key: const Key('pokemonsList'),
              gridDelegate: SliverGridDelegateWithFixedCrossAxisCount(
                crossAxisCount: MediaQuery.of(context).size.width > 700 ? 4 : 3, childAspectRatio: 0.6,),
              itemCount: state.list.length,
              itemBuilder: (context, index) => PokemonListItem(state.list[index]),
            );
          } else if (state is FailedPokemonListState) {
...
